--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="profile">
         <img src="https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-19/s320x320/80550745_3117809444900581_6223977717272936448_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_ohc=7-IVlmP56esAX_2QvB6&oh=1a4204381fca88416f57ddb4c3beaadb&oe=606EEB31" alt="profile-pic">
         <h2>Hello.</h2>
-        <p>I'm Gijung Lee. I am a master's student at the University of Florida. My reserach focuses on Computer Vision in ML/DL.</p>
+        <p class="intro">I'm Gijung Lee. I am a master's student at the University of Florida. My reserach focuses on Computer Vision in ML/DL.</p>
       </div>
       <hr>
       <div class="skills">
@@ -40,7 +40,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love foods or AI!</h3>
-        <p>Just send me an email or follow my instagram. If you want me give a job, check my linkedin!</p>
+        <p class="intro">Just send me an email or follow my instagram. If you want me give a job, check my linkedin!</p>
         <a class="btn" href="mailto:gijung0921@gmail.com">CONTACT ME</a>
       </div>
     </div>
